know more card alignment fix

--- a/public/css/knowmorecard.css
+++ b/public/css/knowmorecard.css
@@ -2,18 +2,13 @@
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.06) !important;
 }
 
-.knowmoremain-content {
-    padding-top: 100px;
-    padding-bottom: 100px;
-}
-
 .knowmorebanner {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 125px;
-    background-image: url("../img/banner.jpg");
+    background-image: url("../images/banner.jpg");
     background-position: center;
     background-size: cover;
 }
